# CommitToFitness

./: .dockerignore  Dockerfile  README.md  buildspec.yml  main.py  pyproject.toml  requirements.txt
.commitToFitness/: pyvenv.cfg
.github/workflows/: aws.yaml
src/squats/: squats.py
src/squats/models/: PoseEstimation.py  PoseModule.py
static/my_model/: metadata.json
templates/: index.html
templates/curl/: index.html
templates/pushup/: pushup.html
templates/shoulderPress/: shoulderPress.html
templates/squats/: sq_counting.html  sq_posture.html
